Adiciona rota de retreino no app e swagger Atualiza learning rate
